Add missing argument to vnaconv_stosrn in vnaconv man page
Correct the missing 'n' argument in the synopsis.

--- a/src/vnaconv.3
+++ b/src/vnaconv.3
@@ -658,7 +658,7 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .if !n .RS +4n
 .BI "const double complex *" z1 ","
 .if n .br
-.BI "const double complex *" z2 ");"
+.BI "const double complex *" z2 ", int " n ");"
 .RE
 .\"
 .SH DESCRIPTION
