--- a/src/TODO
+++ b/src/TODO
@@ -1,42 +1,79 @@
 == Misc ==
 
+    - In vnacal_new_set_m_error, walk the added measurements and
+      check for incomplete T16/U16 matrices.  This allows measurements
+      and set m_error call to be done in any order while giving an
+      error immediately when a conflict is detected.
+      DONE
+
     - In vnadata_save, if saving to a .ts file, set the save type to
       Touchstone v2 instead of the currently somewhat confusing logic
       that first tries v1 then promotes to v2 if needed.  In general,
       VNADATA_FILETYPE_AUTO is always implied because load and save
       both override the type if they can determine it from the filename.
       Make this more clear in the docs -- that the type is used only if
-      load/save cannot determine it and that load sets the type to that
+      load/save cannot determine it, and that load sets the type to that
       of the file loaded.
-
-    - Don't treat .s2p as wild for any number of ports -- warn if it
-      doesn't match actual.
-      DONE
-
-    - In vnadata_load, make the filename extension case-insensitive
-      for determining the file type, e.g. .S4P === .s4p.
-      DONE
 
     - Consider renaming El (leakage) to Ed (directivity), and Ef (forward)
       to Et (transmission tracking).  Maintain backward compatiblity in
-      .vnacal files.
+      .vnacal files.  Is it worth changing at this point??
 
 == New Functions ==
 
     - Add a new vnacal_*_parameter function that takes a vnadata_t
       and returns a matrix of parameter handles.
+      DONE
 
     - Add a new vnacal_*_parameter function that takes a matrix
       representing a multi-port standard, a vector of gamma-el values, one
       for each port, and returns a new matrix of parameter handles with
       lengths of transmission line (possibly negative) added to each port.
 
-    - Add a new vnacal_*_parameter function that takes the parameter
+      Add a new vnacal_*_parameter function that takes the parameter
       handle for a single reflect standard and a gamma-el and returns
       a new parameter handle reflecting the addition of a length of
       transmission line in front of the standard. [Only if this makes
       the API simpler - implement as front-end to the more general
       function.]
+
+      Note that embedding interface below would be more general (but
+      also a more complicated API).
+
+    - Add embedding and de-embedding operations to vnadata:
+
+	int vnadata_embed(const vnadata_t *dut, const vnadata_t *fixture,
+		vnadata_t *vna)
+	int vnadata_deembed(const vnadata_t *vna, const vnadata_t *fixture,
+		vnadata_t *dut)
+
+	where dut is s_ports x s_ports, vna is m_ports x m_ports,
+	and fixture is (s_ports + m_ports) x (s_ports + m_ports) with
+	VNA ports first.  Output should have same frequency vector and
+	reference impedances as input.	Fixture should be interpolated
+	and renormalized as necessary to remain in conjugate transpose
+	with the input and output.
+
+	Slightly separate, but we can generalize vnadata T & U parameters
+	to be 2x2 matrices of matrices (would need to store the internal
+	dimensions, i.e. mrows, mcolumns, srows, scolumns, likely with
+	some constraints such as srows == scolumns.  For consistency,
+	A, B, H & G parameters can be similarly generalized to multiple
+	input ports and multiple output ports.
+
+	There could also be vnacal analogs that work on parameter matrices
+	instead of the dut and vna NPD structures.
+
+    - Add vnacal_renormalize(const double complex *z0_vector, int z0_length)
+
+	  that re-normalizes a calibration.  The z0_length parameter must
+	  be 1, number of ports, or number of frequencies * number of
+	  ports.  The function could also take optional frequency_vector
+	  and frequencies to resample the given z0 values.
+
+	  For rectangular calibrations, we can assume symmetry to
+	  square them, then discard unwanted cells of the result.
+	  [Make sure the result is symmetrical in this case.]
 
 == Improvements to Documentation ==
 
@@ -45,13 +82,20 @@
       For example, in calibration, explain T and U parameters with
       matrix elements and the Ts, Ti, Tx, Tm / Um, Ui, Ux, Us notation.
       Explain that the reason we do everyting in T and U parameters is
-      that the system of equations becomes linear.
+      that the system of equations becomes linear.  Whatever we use,
+      though should be version controlled with the source.
+
+      This should be versioned with the source, which rules out wiki.
+      It could be in markdown, also.
 
 == Improvements to the Examples ==
 
     - Add example for UXYZ, a.k.a "unknown through"
 	unknown symmetrical line (S12=S21)
 	3 known reflects
+
+	Note that this example does exist in the python library built
+	on top of this one.
 
     - Add vnacal-T16-example.c using T-MM-SS-SM-MS standards.
       Approach: generally follow the example of vnacal-TSD-example, but
@@ -69,10 +113,8 @@
 
 == Improvements to the Tests ==
 
-    - For the major diagonal of the error term matrix, instead of using
-      1.0 plus a complex normal, use a more general non-central random
-      number generator.
-      DONE
+    - Add a new test that tests calibration with calkit & data standards
+      and with each Z0 style.
 
     - Make tests that invoke each of the examples.  Create expected output
       files and compare that values are approximately equal.  Be careful
@@ -99,6 +141,7 @@
     - Add frequency-dependent Z0 support to vnacal_new, vnacal.
       Complex reference impedances make sense only if you can specify
       frequency dependent values.
+      DONE
 
     - Bring back vnacal_apply_t and related methods from the git
       history (consider renaming to vnacal_map_t to better match what
