--- a/src/vnadata.3
+++ b/src/vnadata.3
@@ -18,7 +18,7 @@
 .TH VNADATA 3 "2022-03-03" GNU
 .nh
 .SH NAME
-vnadata_alloc, vnadata_init, vnadata_alloc_and_init, vnadata_resize, vnadata_get_type, vnadata_get_type_name, vnadata_set_type, vnadata_get_rows, vnadata_get_columns, vnadata_get_frequencies, vnadata_get_name, vnadata_set_name, vnadata_free, vnadata_get_fmin, vnadata_get_fmax, vnadata_get_frequency, vnadata_set_frequency, vnadata_get_frequency_vector, vnadata_set_frequency_vector, vnadata_add_frequency, vnadata_get_cell, vnadata_set_cell, vnadata_get_matrix, vnadata_set_matrix, vnadata_get_to_vector, vnadata_set_from_vector, vnadata_get_z0, vnadata_set_z0, vnadata_get_z0_vector, vnadata_set_z0_vector, vnadata_set_all_z0, vnadata_has_fz0, vnadata_get_fz0, vnadata_set_fz0, vnadata_get_fz0_vector, vnadata_set_fz0_vector, vnadata_convert, vnadata_rconvert, vnadata_load, vnadata_fload, vnadata_save, vnadata_fsave, vnadata_cksave, vnadata_get_filetype, vnadata_set_filetype, vnadata_get_format, vnadata_set_format, vnadata_get_fprecision, vnadata_set_fprecision, vnadata_get_dprecision, vnadata_set_dprecision \- Network Parameter Data
+vnadata_alloc, vnadata_init, vnadata_alloc_and_init, vnadata_resize, vnadata_get_type, vnadata_get_type_name, vnadata_set_type, vnadata_get_rows, vnadata_get_columns, vnadata_get_frequencies, vnadata_get_name, vnadata_set_name, vnadata_free, vnadata_get_fmin, vnadata_get_fmax, vnadata_get_frequency, vnadata_set_frequency, vnadata_get_frequency_vector, vnadata_set_frequency_vector, vnadata_add_frequency, vnadata_get_cell, vnadata_set_cell, vnadata_get_matrix, vnadata_set_matrix, vnadata_get_to_vector, vnadata_set_from_vector, vnadata_get_z0, vnadata_set_z0, vnadata_get_z0_vector, vnadata_set_z0_vector, vnadata_set_all_z0, vnadata_get_fz0, vnadata_set_fz0, vnadata_get_fz0_vector, vnadata_set_fz0_vector, vnadata_has_fz0, vnadata_convert, vnadata_rconvert, vnadata_load, vnadata_fload, vnadata_save, vnadata_fsave, vnadata_cksave, vnadata_get_filetype, vnadata_set_filetype, vnadata_get_format, vnadata_set_format, vnadata_get_fprecision, vnadata_set_fprecision, vnadata_get_dprecision, vnadata_set_dprecision \- Network Parameter Data
 .\"
 .SH SYNOPSIS
 .B #include <vnadata.h>
@@ -179,8 +179,6 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .\" --------------------------------------------------------------------------
 .SS "Frequency-Dependent Reference Impedances"
 .PP
-.BI "bool vnadata_has_fz0(const vnadata_t *" vdp );
-.PP
 .BI "double complex vnadata_get_fz0(const vnadata_t *" vdp ", int " findex ,
 .if n .in +4n
 .BI "int " port );
@@ -203,6 +201,9 @@ Link with \fI-lvna\fP \fI-lm\fP.
 .if n .in +4n
 .BI "const double complex *" z0_vector );
 .if n .in -4n
+.\"
+.PP
+.BI "bool vnadata_has_fz0(const vnadata_t *" vdp );
 .\" --------------------------------------------------------------------------
 .SS "Parameter Conversion"
 .PP
@@ -300,7 +301,7 @@ data to the new type.  For type conversion, see \fBvnadata_convert\fP().
 .\"
 .PP
 The \fBvnadata_get_type\fP() function returns the current parameter type
-of the matrix; \fBvnadata_get_typename\fP() returns \fItype\fP as a string.
+of the matrix; \fBvnadata_get_type_name\fP() returns \fItype\fP as a string.
 The \fBvnadata_set_type\fP() function changes the parameter type without
 converting existing data.
 The \fItype\fP parameter must be consistent with the matrix dimensions.
@@ -340,13 +341,13 @@ The length of \fIfrequency_vector\fP must match \fIfrequencies\fP.
 .PP
 The \fBvnadata_add_frequency\fP() function adds a new frequency entry
 at the end, filling the associated new data elements with initial values.
-This function is useful, for example, when parsing a Touchstone V1 file,
+This function is useful, for example, when parsing a Touchstone 1 file,
 where you don't know the number of frequencies up-front.
 .\" --------------------------------------------------------------------------
 .SS "Data Elements"
 .PP
 The \fBvnadata_get_cell\fP() and \fBvnadata_set_cell\fP() functions
-get and set indivdual data elements.
+get and set individual data elements.
 The \fBvnadata_get_matrix\fP() and \fBvnadata_set_matrix\fP() functions
 get and set the parameter data matrix for the given frequency.
 The \fImatrix\fP parameter is a pointer to a vector of double complex
@@ -373,11 +374,11 @@ of all ports to the same value, \fIz0\fP.
 If not set, all reference impedances default to 50 ohms.
 .PP
 Calling \fBvnadata_set_z0\fP(), \fBvnadata_set_z0_vector\fP(), or
-\fBvnadata_set_all_z0\fP() when frequency-dependent impedances are in-use
+\fBvnadata_set_all_z0\fP() when frequency-dependent impedances are in use
 (see below) discards all frequency-dependent z0 values and returns to
 ordinary reference impedances with all other impedance values initialized
 to 50 ohms.
-If frequency-dependent impedances are in-use, \fBvnadata_get_z0\fP()
+If frequency-dependent impedances are in use, \fBvnadata_get_z0\fP()
 and \fBvnadata_get_z0_vector\fP() return failure.
 .\" --------------------------------------------------------------------------
 .SS "Frequency-Dependent Reference Impedances"
@@ -389,15 +390,16 @@ functions get and set the reference impedances for all ports at a given
 frequency index, where the length of \fIz0_vector\fP is the maximum of
 \fIrows\fP and \fIcolumns\fP.
 .PP
-The \fBvnadata_has_fz0\fP() function tests if per-frequency reference
-impedances are in effect and returns true if they are.
-If frequency-dependent impedances are not in-use, the
+If frequency-dependent impedances are not already in use, the
 \fBvnadata_set_fz0\fP() and \fBvnadata_set_fz0_vector\fP() functions
-establish frequency-dependent reference impedances, preserving the
-ordinary reference impedances for all other entries.
+establish frequency-dependent reference impedance behavior, preserving
+the ordinary reference impedances for all frequencies and ports not
+explicitly overridden.
 \fBvnadata_get_fz0\fP() and \fBvnadata_get_fz0_vector\fP() functions
 work regardless of whether frequency-dependent reference impedances are
-in-effect; in the later case, they don't use the \fIfindex\fP argument.
+in use; if they are not, the \fIfindex\fP argument is ignored.
+The \fBvnadata_has_fz0\fP() function returns true if per-frequency
+reference impedances are in use.
 .\"
 .\" --------------------------------------------------------------------------
 .SS "Parameter Conversion"
@@ -408,8 +410,9 @@ If \fIvdp_out\fP refers to the same structure as \fIvdp_in\fP, then an
 in-place conversion is done.
 If \fIvdp_out\fP is not the same as \fIvdp_in\fP and \fInew_parameter\fP
 is the same type as the input matrix, the data are simply copied.
-\fBvnadata_convert\fP() supports all 72 parameter conversions plus 9
-conversions from parameter data to input impedances at each port.
+\fBvnadata_convert\fP() supports all pairwise conversions among supported
+parameter types, plus conversions from parameter data to input impedance
+at each port.
 .PP
 The \fBvnadata_rconvert\fP() function re-normalizes the reference
 impedances to those given in \fInew_z0\fP, optionally also converting
@@ -482,7 +485,7 @@ typedef enum vnadata_filetype {
 .fi
 .in -4n
 .sp
-The default is \s-2VNAFILE_AUTO\s+2 which causes the load and save
+The default is \s-2VNADATA_FILETYPE_AUTO\s+2 which causes the load and save
 functions to try to determine the file type based on the filename
 extension.
 If the file ends with \.s<digit>p, the library assumes Touchstone 1
@@ -512,7 +515,7 @@ Zin[ri|ma]	impedance looking into each port
 PRC	Zin as parallel resistance and capacitance
 PRL	Zin as parallel resistance and inductance
 SRC	Zin as series resistance and capacitance
-SRL	Zin as series resistance and inducatance
+SRL	Zin as series resistance and inductance
 IL	insertion loss (dB)
 RL	return loss (dB)
 VSWR	voltage standing wave ratio
@@ -552,7 +555,7 @@ defaults to 6 digits.
 .\"
 .SH "RETURN VALUE"
 On success, the allocate functions return a pointer to a \fBvnadata_t\fP
-structure; the get functions return the requested value, and other
+structure; the get functions return the value requested, and other
 integer valued functions return zero.
 On error, the integer valued functions return -1; the pointer valued
 functions return NULL; and the double and double complex functions
